Bug 56278 - EDITING: Calculate formula: DEl or BS to empty a cell with a formula, does not result in updating a formula referencing that cell
Summary: EDITING: Calculate formula: DEl or BS to empty a cell with a formula, does no...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.2.2 release
Hardware: All All
: high critical
Assignee: Eike Rathke
URL:
Whiteboard: target:4.0.0 target:3.6.4 target:4.1.0
Keywords: regression
: 57229 57648 60155 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-10-22 11:07 UTC by Cor Nouws
Modified: 2013-02-01 13:10 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-10-22 11:07:27 UTC
Working in Version 3.6.2.2 (build-id: da8c1e6)

A more nested example of the same problem.

     A     B      C

1    2     4      =A1/B1  

2    5    =B1*C1


Value in B2 = 2

Now delete C1 ... B2 does not change, still shows value 2

Only when I actually enter C1, select the formula, delete it and press Enter ...
then B2 is updated correctly.

(Of course, same problem in masterbuild)
Comment 1 vitriol 2012-10-22 11:18:13 UTC
Confirmed also under Win
Comment 2 Cor Nouws 2012-11-09 05:40:11 UTC
better add it to MAB
Comment 3 Eike Rathke 2012-11-13 16:22:15 UTC
Regression introduced with fix for bug 54074 and bug 53364
Comment 4 Eike Rathke 2012-11-13 16:39:37 UTC
Very similar to bug 55059 but for formula cells instead of data cells.
Comment 5 Not Assigned 2012-11-14 21:06:12 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8165bfa2afbe828caf37df57b83cb31bef2559cb

resolved fdo#56278 broadcast deletion to dependent formula cells



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Not Assigned 2012-11-15 04:07:19 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6e622029b8f1c450b9d535e94212bf06666acf3&g=libreoffice-3-6

resolved fdo#56278 broadcast deletion to dependent formula cells


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Not Assigned 2012-11-17 04:06:27 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13f85c24bd9e0d25af0dc1a4887d14449a8e5b55&g=libreoffice-3-6-4

resolved fdo#56278 broadcast deletion to dependent formula cells


It will be available already in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Markus Mohrhard 2012-11-17 17:59:27 UTC
*** Bug 57229 has been marked as a duplicate of this bug. ***
Comment 9 luksiw 2012-11-18 12:54:30 UTC
Works fine in Version 4.0.0.0.alpha0+ (Build ID: 04f2f0).
Comment 10 vitriol 2012-11-28 10:19:01 UTC
*** Bug 57648 has been marked as a duplicate of this bug. ***
Comment 11 Not Assigned 2013-01-02 19:08:52 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1f9efa4ac8a406cf10f3b5585f45ee0114621e4

fdo#56278: Write a unit test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Not Assigned 2013-01-03 01:56:23 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2b91f39f7162e031c07235a60bfe04f26fee53a&h=libreoffice-4-0

fdo#56278: Write a unit test for this.


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Jorendc 2013-02-01 13:10:51 UTC
*** Bug 60155 has been marked as a duplicate of this bug. ***