resolved fdo#56278 broadcast deletion to dependent formula cells

Consolidated changes for fdo#56278 fdo#54074 fdo#53364 fdo#55059 (and
earlier i#99844 and i#101869). The replacement cell for the broadcaster
to inform listeners, if any, is transferred the broadcaster and owns it,
the remembered formula cell never does. When broadcasting the change use
the replacement cell instead of the remembered formula cell. Don't
fiddle around with ReleaseBroadcaster() at the remembered cell, we don't
delete twice and now also don't leak.

(cherry picked from commit 8165bfa2afbe828caf37df57b83cb31bef2559cb)

Change-Id: Ia11b6d3d751c784af64aaed05f8508887f869a80